Fixed accessibility issue
Added label to text input field that is hidden by CSS

--- a/index.css
+++ b/index.css
@@ -193,3 +193,16 @@ span {
     gap: .5rem;
     margin-bottom: .5rem;
 }
+
+/****** HIDE LABELS FOR TEXT INPUT FIELDS ******/
+
+.hidden {
+    position: absolute;
+    clip-path: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+  } 
